--- a/META.yml
+++ b/META.yml
@@ -1,30 +1,30 @@
---- #YAML:1.0
-name:               Data-Pensieve
-version:            0.02
-abstract:           Simple tool for interacting with revisioned data
+---
+abstract: 'Simple tool for interacting with revisioned data'
 author:
-    - Michael Aquilina <aquilina@cpan.org>
-license:            unknown
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Michael Aquilina <aquilina@cpan.org>'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    Carp:                    0
-    DateTime:                0
-    DateTime::Format::MySQL: 0
-    DBI:                     0
-    List::Util:              0
-    List::MoreUtils:         0
-    Storable:                0
-    Text::Diff:              0
-    Moose:                   0
-no_index:
-    directory:
-        - t
-generated_by:       ExtUtils::MakeMaker version 6.52
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.112150'
+license: unknown
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
-
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Data-Pensieve
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  Carp: 0
+  DBI: 0
+  DateTime: 0
+  DateTime::Format::MySQL: 0
+  List::MoreUtils: 0
+  List::Util: 0
+  Moose: 0
+  Storable: 0
+  Text::Diff: 0
+version: 0.03
